# test-taker

./: .gitignore  AGENTS.md  CHAT_REQUIREMENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SPEC.md  build.sh  rebuild.sh  sample.md  tables.md  test.md
completions/: _mdviewer
docs/: DEBUG.md  googletest-walkthrough.md
game/: asteroids.cpp  main.cpp
src/: app_frame.cpp  app_frame.h  chat_frame.cpp  chat_frame.h  chat_html.cpp  chat_html.h  chat_panel.cpp  chat_panel.h  config.cpp  config.h  conversation.cpp  conversation.h  corpus.cpp  corpus.h  corpus_panel.cpp  corpus_panel.h  create_panel.cpp  create_panel.h  creator.cpp  creator.h  edit_panel.cpp  edit_panel.h  editor.cpp  editor.h  embeddings.cpp  embeddings.h  exam_meta.cpp  exam_meta.h  exam_panel.cpp  exam_panel.h  exam_prompt.cpp  exam_prompt.h  focus_list_panel.cpp  focus_list_panel.h  game_data.cpp  game_data.h  game_dialog.h  git_import.cpp  git_import.h  git_ops.cpp  (+62 more)
tests/: main.cpp  test_chat_panel.cpp  test_config.cpp  test_conversation.cpp  test_corpus.cpp  test_creator.cpp  test_editor.cpp  test_exam_meta.cpp  test_exam_prompt.cpp  test_game_data.cpp  test_git_import.cpp  test_git_ops.cpp  test_hljs.js  test_html_template.cpp  test_llm_error.cpp  test_llm_response.cpp  test_markdown.cpp  test_mdviewer.cpp  test_meta.cpp  test_new_session_html.cpp  test_notes.cpp  test_persona_tab.cpp  test_project.cpp  test_project_panel_html.cpp  test_project_search.cpp  test_renderer.cpp  test_saved_convos.cpp  test_session.cpp  test_turn_chat.cpp  test_web_fetch.cpp  thumbnail_stub.cpp
